Fix overlapping footer.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -116,6 +116,7 @@ body {
   width: 300px;
   margin: 0 auto;
   padding-top: 110px;
+  padding-bottom: 64px;
   z-index: 1;
   text-align: center;
 }
